--- a/project/casuni/templates/propietario_home.html
+++ b/project/casuni/templates/propietario_home.html
@@ -43,6 +43,7 @@
             <h1>Bienvenido {{ nombre_usuario }}</h1>
         </div>
         <p>¡Gracias por iniciar sesión como propietario!</p>
+        <a href="{% url 'propietario_perfil' propietario_id %}">Ver mi perfil</a>
     </div>
 </body>
 </html>
