--- a/project/casuni/templates/alojamiento_detalle.html
+++ b/project/casuni/templates/alojamiento_detalle.html
@@ -1,35 +1,168 @@
-<!-- alojamiento_detalle.html -->
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>{{ alojamiento.nombre }}</title>
-</head>
-<body>
-    <h2>{{ alojamiento.nombre }}</h2>
-    <p><strong>Dirección:</strong> {{ alojamiento.direccion }}</p>
-    <p><strong>Descripción:</strong> {{ alojamiento.descripcion }}</p>
-    <p><strong>Precio:</strong> {{ alojamiento.precio }}</p>
-    <p><strong>Fecha en la que se encuentra disponible:</strong> {{ alojamiento.fecha_inicio }}</p>
-    {% if alojamiento.fecha_fin %}
-        <p><strong>Disponible hasta:</strong> {{ alojamiento.fecha_fin }}</p>
-    {% else %}
-        <p><strong>No tiene fecha de baja!</strong></p>
-    {% endif %}
-    
-    <h3>Servicios:</h3>
-    <ul>
-        {% for servicio in alojamiento.servicios.all %}
-            <li>{{ servicio.nombre }}</li>
-        {% endfor %}
-    </ul>
-    
-    <h3>Fotos:</h3>
-    {% for foto in alojamiento.fotos.all %}
-        <img src="{{ foto.imagen.url }}" alt="{{ foto.descripcion }}">
-        {% if foto.descripcion %}
-            <p>{{ foto.descripcion }}</p>
-        {% endif %}
-    {% endfor %}
-</body>
-</html>
+{% extends "layout.html" %} {% load static %} {% block head%}
+<link rel="stylesheet" href="{% static 'css/alojamiento_detalle.css' %}" />
+{% endblock %} 
+
+
+{% block body%}
+
+
+<div class="container-fluid alojamiento-view">
+	<div class="row">
+		<div class="col-md-12">
+			<h2>{{ alojamiento.nombre }}</h2>
+			<p>
+                ⭐ PUNTAJE · X Reviews · {{alojamiento.direccion}}
+			</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-12 mb-4">   
+            {% if alojamiento.fotos.all %}
+            <div class="container">
+            <div class="row d-flex justify-content-center mt-2">
+                <div class="">
+                <div
+                    id="myCarousel"
+                    class="carousel slide"
+                    data-ride="carousel"
+                    align="center"
+                >
+                    <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img
+                        src="{{ alojamiento.fotos.first.imagen.url }}"
+                        class="rounded"
+                        />
+                    </div>
+                    {% for foto in alojamiento.fotos.all %} {% if not forloop.first %} 
+                    <div class="carousel-item">
+                        <img src="{{ foto.imagen.url }}" class="rounded" />
+                    </div>
+                    {% endif %} {% endfor %}
+                    </div>
+                    <ol class="carousel-indicators list-inline">
+                    <li class="list-inline-item active">
+                        <a
+                        id="carousel-selector-0"
+                        class="selected"
+                        data-slide-to="0"
+                        data-target="#myCarousel"
+                        >
+                        <img
+                            src="{{ alojamiento.fotos.first.imagen.url }}"
+                            class="img-fluid rounded"
+                        />
+                        </a>
+                    </li>
+                    {% for foto in alojamiento.fotos.all %} {% if not forloop.first %} {% with forloop.counter0 as index %}
+                    <li class="list-inline-item">
+                        <a
+                        id="carousel-selector-{{ index }}"
+                        data-slide-to="{{ index }}"
+                        data-target="#myCarousel"
+                        >
+                        <img src="{{ foto.imagen.url }}" class="img-fluid rounded" />
+                        </a>
+                    </li>
+                    {% endwith %} {% endif %} {% endfor %}
+                    </ol>
+                </div>
+                </div>
+            </div>
+            </div>
+            {% else %}
+            <p>No hay fotos disponibles.</p>
+            {% endif %}
+		</div>
+	</div>
+	<div class="row mt-5">
+		<div class="col-md-8">
+			<div class="row">
+				<div class="col-md-10">
+					<h3>
+						Propiedad de {{alojamiento.propietario.user.first_name}}
+					</h3>
+                      <p><strong>Disponibilidad:</strong> {{alojamiento.fecha_inicio }}
+                      {% if alojamiento.fecha_fin %}
+                      <strong> - </strong> {{ alojamiento.fecha_fin }}
+                      {% else %}
+                      <strong>No tiene fecha de baja!</strong></p>
+                      {% endif %}
+				</div>
+				<div class="col-md-2">
+					<img alt="Bootstrap Image Preview" src="{{ alojamiento.propietario.imagen.url }}" />
+				</div>
+			</div>
+			<p>
+                {{alojamiento.descripcion}}
+			</p>
+			<div class="row">
+				<div class="col-md-12">
+					<h3>Servicios:</h3>
+                    <ul>
+                    {% for servicio in alojamiento.servicios.all %}
+                    <li>{{ servicio.nombre }}</li>
+                    {% endfor %}
+                    </ul>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-4">
+            <h4>¡Quiero este alojamiento!</h4>
+            <strong>$ {{ alojamiento.precio }} / mensual <strong>
+                <form method="post" role="form">
+                    {% csrf_token %}
+                    
+                    <div class="form-group">
+                        <label for="id_fechaDesde">Fecha Desde</label>
+                        {{ form.fechaDesde }}
+                        {% if form.fechaDesde.errors %}
+                            <div class="alert alert-danger">
+                                {% for error in form.fechaDesde.errors %}
+                                    <strong>{{ error|escape }}</strong><br>
+                                {% endfor %}
+                            </div>
+                        {% endif %}
+                    </div>
+                    
+                    <div class="form-group">
+                        <label for="id_fechaHasta">Fecha Hasta</label>
+                        {{ form.fechaHasta }}
+                        {% if form.fechaHasta.errors %}
+                            <div class="alert alert-danger">
+                                {% for error in form.fechaHasta.errors %}
+                                    <strong>{{ error|escape }}</strong><br>
+                                {% endfor %}
+                            </div>
+                        {% endif %}
+                    </div>
+                    
+                    <div class="form-group">
+                        <label for="id_mensaje">Mensaje</label>
+                        {{ form.mensaje }}
+                        {% if form.mensaje.errors %}
+                            <div class="alert alert-danger">
+                                {% for error in form.mensaje.errors %}
+                                    <strong>{{ error|escape }}</strong><br>
+                                {% endfor %}
+                            </div>
+                        {% endif %}
+                        <small id="mensajeHelp" class="form-text text-muted">Escribe un mensjae al propietario preguntandole por este alojamiento</small>
+                    </div>
+                    
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+        </div>        
+	<div class="row">
+		<div class="col-md-12">
+			<h3>
+				Reseñas
+			</h3>
+		</div>
+	</div>
+</div>
+
+
+{% endblock %} 
+
+
