--- a/project/casuni/templates/estudiante_perfil.html
+++ b/project/casuni/templates/estudiante_perfil.html
@@ -1,18 +1,75 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Perfil de Estudiante</title>
-</head>
-<body>
-    <h2>Perfil de {{ estudiante.user.username }}</h2>
-    <img src="{{ estudiante.imagen.url }}" alt="Foto de perfil">
+{% extends "layout.html" %}
+{% load static %}
 
-    <p>Telefono: {{ estudiante.telefono }}</p>
-    <p>Dirección: {{ estudiante.direccion }}</p>
-    <p>Género: {{ estudiante.get_genero_display }}</p>
-    <p>Fecha de Nacimiento: {{ estudiante.fecha_nacimiento }}</p>
-    <p>Descripción: {{ estudiante.descripcion }}</p>
-    <p>Universidad: {{ estudiante.universidad }}</p>
-</body>
-</html>
+{% block head %}
+<!-- Link template https://bootstrapbrain.com/component/bootstrap-free-profile-template/#code -->
+<link rel="stylesheet" href="{% static 'css/perfil.css' %}" />
+<link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+{% endblock %}
+
+{% block body%}
+<script src="https://unpkg.com/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<section class="bg-light py-3 py-md-5 py-xl-8">  
+    <div class="container">
+        <div class="row gy-4 gy-lg-0">
+          <div class="col-12 col-lg-4 col-xl-3">
+            <div class="row gy-4">
+              <div class="col-12">
+                <div class="card widget-card border-light shadow-sm">
+                  <div class="card-header" style="color: #666;"> Bienvenid@ {{ estudiante.user.username }} </div>
+                  <div class="card-body">
+                    <div class="text-center mb-3">
+                      <img  src="{{ estudiante.imagen.url }}" class="img-fluid rounded-circle">
+                    </div>
+                    <ul class="list-group">
+                      <li class="list-group-item d-flex justify-content-between align-items-center">
+                        <h6 class="m-0"><i class="fas fa-pencil-alt"></i> Editar perfil</h6>
+                      </li>
+                      <li class="list-group-item d-flex justify-content-between align-items-center">
+                        <h6 class="m-0"><i class="fas fa-flag"></i> Reportar un problema</h6>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="col-12">
+                <div class="card widget-card border-light shadow-sm">
+                  <div class="card-header" style="color: #666;">Notificaciones</div>
+                  <div class="card-body">
+                    <ul class="list-group list-group-flush mb-0">
+                      <li class="list-group-item">
+                        <h6 class="mb-1">
+                          <span class="bii bi-chat-right-dots-fill me-2"></span>
+                          ¡Te han aceptado la reserva!
+                        </h6>
+                      </li>
+                      <li class="list-group-item">
+                        <h6 class="mb-1">
+                          <span class="bii bi-chat-left-quote-fill me-2"></span>
+                          ¡Dario ha contestado tu pregunta!
+                        </h6>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-lg-8 col-xl-9">
+            <div class="card widget-card border-light shadow-sm">
+              <div class="card-body p-4">
+                <div class="tab-pane fade show active" id="overview-tab-pane" role="tabpanel" aria-labelledby="overview-tab">
+                  <h2 class="mb-1 display-6 text-left text-dark">Estudiante</h2>
+                  <h2 class="mb-1 display-6 text-left text-dark">{{ estudiante.user.first_name }} {{ estudiante.user.last_name }}</h2>
+                  <h3 class="text-dark text-left lead fs-2 mb-3">Estudiante de la {{ estudiante.universidad }}</h3>
+                  <h4 class="text-dark text-left lead fs-4 mb-3">{{ estudiante.descripcion }}</h4>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+    </div>
+  
+  </section>
+  {% endblock %}
