--- a/project/casuni/templates/propietario_perfil.html
+++ b/project/casuni/templates/propietario_perfil.html
@@ -1,31 +1,74 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Perfil de Propietario</title>
-</head>
-<body>
-    <h2>Perfil de {{ propietario.user.username }}</h2>
-    <img src="{{ propietario.imagen.url }}" alt="Foto de perfil">
+{% extends "layout.html" %}
+{% load static %}
 
-    <p>Telefono: {{ propietario.telefono }}</p>
-    <p>Dirección: {{ propietario.direccion }}</p>
-    <p>Género: {{ propietario.get_genero_display }}</p>
-    <p>Fecha de Nacimiento: {{ propietario.fecha_nacimiento }}</p>
-    <p>Descripción: {{ propietario.descripcion }}</p>
+{% block head %}
+<!-- Link template https://bootstrapbrain.com/component/bootstrap-free-profile-template/#code -->
+<link rel="stylesheet" href="{% static 'css/perfil.css' %}" />
+<link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+{% endblock %}
 
-    <h3>Sus Propiedades (Alojamientos):</h3>
-    {% if alojamientos %}
-        <ul>
-            {% for alojamiento in alojamientos %}
-                <li>
-                    <a>{{ alojamiento.nombre }}</a>
-                    <a href="{% url 'alojamiento_detalle' alojamiento.id %}">Ver alojamiento</a>
-                </li>
-            {% endfor %}
-        </ul>
-    {% else %}
-        <p>No tienes alojamientos registrados.</p>
-    {% endif %}
-</body>
-</html>
+{% block body%}
+<script src="https://unpkg.com/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<section class="bg-light py-3 py-md-5 py-xl-8">  
+    <div class="container">
+        <div class="row gy-4 gy-lg-0">
+          <div class="col-12 col-lg-4 col-xl-3">
+            <div class="row gy-4">
+              <div class="col-12">
+                <div class="card widget-card border-light shadow-sm">
+                  <div class="card-header" style="color: #666;"> Bienvenid@ {{ propietario.user.username }} </div>
+                  <div class="card-body">
+                    <div class="text-center mb-3">
+                      <img  src="{{ propietario.imagen.url }}" class="img-fluid rounded-circle">
+                    </div>
+                    <ul class="list-group">
+                      <li class="list-group-item d-flex justify-content-between align-items-center">
+                        <h6 class="m-0"><i class="fas fa-pencil-alt"></i> Editar perfil</h6>
+                      </li>
+                      <li class="list-group-item d-flex justify-content-between align-items-center">
+                        <h6 class="m-0"><i class="fas fa-flag"></i> Reportar un problema</h6>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="col-12">
+                <div class="card widget-card border-light shadow-sm">
+                  <div class="card-header" style="color: #666;">Notificaciones</div>
+                  <div class="card-body">
+                    <ul class="list-group list-group-flush mb-0">
+                      <li class="list-group-item">
+                        <h6 class="mb-1">
+                          <span class="bi bi-bell-fill me-2"></span>
+                          ¡Te llegado una nueva reserva!
+                        </h6>
+                      </li>
+                      <li class="list-group-item">
+                        <h6 class="mb-1">
+                          <span class="bbi bi-star-fill me-2"></span>
+                          ¡Tienes una nueva calificación!
+                        </h6>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-lg-8 col-xl-9">
+            <div class="card widget-card border-light shadow-sm">
+              <div class="card-body p-4">
+                <div class="tab-pane fade show active" id="overview-tab-pane" role="tabpanel" aria-labelledby="overview-tab">
+                  <h2 class="mb-1 display-6 text-left text-dark">Propietario</h2>
+                  <h2 class="mb-1 display-6 text-left text-dark">{{ propietario.user.first_name }} {{ propietario.user.last_name }}</h2>
+                  <h4 class="text-dark text-left lead fs-4 mb-3">{{ propietario.descripcion }}</h4>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+    </div>
+  
+  </section>
+  {% endblock %}
