--- a/project/casuni/templates/propietario_perfil.html
+++ b/project/casuni/templates/propietario_perfil.html
@@ -66,7 +66,64 @@
                 </div>
               </div>
             </div>
-          </div>
+          
+          <!-- Propiedades del propietario -->
+          <div class="col-12 card widget-card border-light shadow-sm mt-5 pb-5">
+            <h3 class="mb-1 display-6 text-left text-dark">Mis propiedades</h3>
+            <div class="row ng-scope mt-5">
+                <div class="col-md-9 col-md-pull-3">
+                    {% for alojamiento in alojamientos %}
+                    <div class="container-fluid card-alojamiento">
+                        <div class="row">
+                            <div class="col-md-4">
+                                {% if alojamiento.fotos.all %}
+                                <img src="{{alojamiento.fotos.first.imagen.url}}" class="card-img" alt="...">
+                                {% else %}
+                                <img src="{% static 'placeholder.jpg' %}" class="card-img" alt="Placeholder">
+                                {% endif %}
+                            </div>
+                            <div class="col-md-8">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <p>
+                                            {{alojamiento.direccion}}
+                                        </p>
+                                        <h4>
+                                            <a href="{% url 'alojamiento_detalle' alojamiento.id %}">
+                                            {{alojamiento.nombre}}
+                                            </a>
+                                        </h4>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        {% for servicio in alojamiento.servicios.all %}
+                                        {{ servicio.nombre }} ·
+                                        {% endfor %}
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <p class="text-left">
+                                            Calificacion  ⭐ (X Reviews)
+                                        </p>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <p class="text-right">
+                                            $ {{alojamiento.precio}}/mensual
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+      </div>
+
+
         </div>
     </div>
   
