--- a/project/casuni/templates/login.html
+++ b/project/casuni/templates/login.html
@@ -48,7 +48,7 @@
                     </div>
 
                     <div class="divider d-flex align-items-center my-4">
-                        <p class="text-center fw-bold mx-3 mb-0">Or</p>
+                        <p class="text-center fw-bold mx-3 mb-0">Iniciar sesión</p>
                     </div>
 
                     <!-- Username input -->
