--- a/project/casuni/templates/solicitud.html
+++ b/project/casuni/templates/solicitud.html
@@ -36,22 +36,28 @@
                         {% if solicitud.estado == 'P' %}
                             Pendiente
                         {% elif solicitud.estado == 'A' %}
-                            Aceptado
+                            Aceptada
                         {% elif solicitud.estado == 'R' %}
-                            Rechazado
+                            Rechazada
                         {% endif %}
-
                     <!-- Botones de navegación -->
                     <div class="mt-3">
                         <a href="{% url 'home' %}" class="btn btn-primary me-2">Volver al menu de inicio</a>
                         <a href="{% url 'alojamiento_detalle' alojamiento.id %}" class="btn btn-secondary">Volver al alojamiento</a>
-                    <!-- Mostrar botón de crear reserva si la solicitud está aceptada -->
-                    {% if solicitud.estado == 'A' %}
-                        {% if not existe_reserva %}
+                    </div>
+                    {% if reserva_activa %}
+                    <br>
+                    <h5>Reserva actual:</h5>
+                    <p><strong>Alojamiento:</strong> {{ reserva_activa.alojamiento.nombre }}</p>
+                    <p><strong>Fecha Inicio:</strong> {{ reserva_activa.fechaInicio|date:"d/m/Y" }}</p>
+                    <p><strong>Fecha Fin:</strong> {{ reserva_activa.fechaFin|date:"d/m/Y" }}</p>
+                    <p><strong>Estado:</strong> {{reserva_activa.estado}}</p>
+                    {% else %}
+                        <!-- Mostrar botón de crear reserva si la solicitud está aceptada -->
+                        {% if solicitud.estado == 'A' %}
                             <a href="{% url 'crear_reserva' solicitud.id %}" class="btn btn-success">Crear reserva</a>
                         {% endif %}
                     {% endif %}
-                    </div>
                 </div>
             </div>
         </div>
