--- a/project/casuni/templates/alojamiento_detalle.html
+++ b/project/casuni/templates/alojamiento_detalle.html
@@ -223,8 +223,8 @@
                                                 </div>
                                                 <p>{{ reserva.mensaje }}</p>
                                                 <p>Fechas de ocupación: {{ reserva.fechaInicio }} - {{ reserva.fechaFin }}</p>
-                                                <p>Reserva realizada: {{ reserva.fecha }}</p>
-                                                <p>Estado: {{ reserva.get_estado_display }}</p>
+                                                <p>Fecha de realización de la reserva: {{ reserva.fecha }}</p>
+                                                <p>Estado: {{ reserva.estado }}</p>
                                             </div>
                                         </div>
                                     {% endfor %}
