--- a/project/casuni/templates/estudiante_perfil.html
+++ b/project/casuni/templates/estudiante_perfil.html
@@ -50,7 +50,7 @@
                       {% for notificacion in estudiante.user.notificaciones.all %}
                         <li class="list-group-item">
                           <h6 class="mb-1">
-                            <span class="bii bi-chat-right-dots-fill me-2"></span>
+                            <span class="bi bi-bell me-2"></span>
                             {{notificacion.texto}}
                           </h6>
                         </li>
